# f5-ai-solutions-for-google-cloud

./: .gitignore  .pre-commit-config.yaml  .talismanrc  .yamllint.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  skaffold.yaml
.bootstrap/: README.md  main.tf  outputs.tf  variables.tf
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json
.github/: dependabot.yml
.github/workflows/: chart-stager.sh  cloud-deploy-deployments.yml  cloud-deploy.yml  container-stager.sh  container-stager.yml  infra-manager-foundations.yml  infra-manager-vertex-ai.yml  infra-manager-wrapper.sh  infra-manager.yml  model-stager.sh  pre-commit.yml  release-please.yml  stale.yml
deployments/cai-crds/: Kptfile  package-context.yaml  set-annotations.yaml  skaffold.yaml
deployments/cai-moderator/: Kptfile  package-context.yaml  set-annotations.yaml  skaffold.yaml
deployments/cai-redteam/: Kptfile  package-context.yaml  skaffold.yaml
deployments/cai-scanner/: Kptfile  package-context.yaml  set-annotations.yaml  skaffold.yaml
deployments/helpers/: cai-drop-dbs.yaml
deployments/pre-requisites/: cai-drop-dbs.yaml  kustomization.yaml  namespaces.yaml  pg-admin.yaml
deployments/shared-services/: Kptfile  gateway.yaml  (+6 more)
foundations/: README.md  access.tf  cache.tf  cluster.tf  main.tf  managed_access.tf  nginxaas_access.tf  outputs.tf  pg.tf  secrets.tf  storage.tf  variables.tf  vertex_ai.tf  vpc.tf
gke-gateway/: main.tf  outputs.tf  pg.tf  variables.tf
nginxaas/: nginx.conf
vertex-ai/: README.md  main.tf  outputs.tf  variables.tf
(+78 files in other folders)
