[project]
name = "f5-ai-solutions-for-google-cloud"
version = "0.0.1"
description = "Test harness for bootstrapped repos"
readme = "README.md"
requires-python = ">=3.12"
# spell-checker: disable
dependencies = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pyright[nodejs]>=1.1.408",
    "ruff>=0.14.14",
]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
ignore = []
select = ["ALL"]
extend-select = ["I"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
# Allow assert and don't complain about implicit namespaces for tests.
"**/tests/**/*" = ["S", "INP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.coverage.paths]
source = ["tests"]

[tool.coverage.report]
show_missing = true

[tool.coverage.run]
branch = true

[tool.pytest.ini_options]
addopts = "--import-mode=importlib --cov=tests --cov-report=term-missing"
log_cli = true
log_cli_level = "WARNING"
log_cli_format = "%(asctime)s - %(levelname)s:%(name)s:%s(message)"
log_cli_date_format = "%Y-%m-%dT%H:%M:%S%z"
testpaths = ["tests"]
